# notes2anki-v2

./: .env.example  .gitignore  PROJECT_MEMORY.md  README.md  pyproject.toml
src/notes2anki_v2/: __init__.py  __main__.py  ai.py  anki.py  cli.py  config.py  console.py  documents.py  files.py  history.py  latex.py  models.py  pipeline.py
tests/: test_ai_json.py  test_anki.py  test_cli.py  test_config.py  test_documents.py  test_latex.py  test_pipeline.py
